--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </section>
   <aside><p>other links or info</p>
 	<ul><li><a class="stan" href="https://www.britannica.com/biography/Stan-Lee" >stan lee creator of MARVEL Comics</a></li>
-		<li><a class="dc" href="https://www.britannica.com/topic/DC-Comics#ref1196758" >Malcolm Wheeler-Nicholson creator of DC Comics</a></li>
+		<li><a style="color:red;" href="https://www.britannica.com/topic/DC-Comics#ref1196758" >Malcolm Wheeler-Nicholson creator of DC Comics</a></li>
 	  </ul>
 	</aside>
 <footer><em><p>this page created by Kaden Poland &copy; 2021</p></em></footer>
