--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	</article>
 </section>
   <aside><p>other links or info</p>
-	<ul><li><a class="stan" href="https://www.britannica.com/biography/Stan-Lee" >stan lee creator of MARVEL Comics</a></li>
+	<ul><li><a style="#0476f2" href="https://www.britannica.com/biography/Stan-Lee" >stan lee creator of MARVEL Comics</a></li>
 		<li><a style="color:red;" href="https://www.britannica.com/topic/DC-Comics#ref1196758" >Malcolm Wheeler-Nicholson creator of DC Comics</a></li>
 	  </ul>
 	</aside>
