--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 <div class="pagebox">
 	<header>HISTORY OF COMICS</header>
-  <nav><ul>
+  <img src="images/photo-1612036782180-6f0b6cd846fe.jfif" width="50%" height="auto" alt=""/><img src="images/photo-1587270613291-b5c7042fc104.jfif" width="50%" height="auto" alt=""/>
+<nav><ul>
 	  <li><a href="index.html">HOME</a></li>
 	  <li><a href="#link2">COMICS</a></li>
 	  <li><a href="#link3">ABOUT</a></li>
@@ -30,8 +31,8 @@
 	</article>
 </section>
   <aside><p>other links or info</p>
-	<ul><li><a style="#0476f2" href="https://www.britannica.com/biography/Stan-Lee" >stan lee creator of MARVEL Comics</a></li>
-		<li><a style="color:red;" href="https://www.britannica.com/topic/DC-Comics#ref1196758" >Malcolm Wheeler-Nicholson creator of DC Comics</a></li>
+	<ul><p><li><a href="https://www.britannica.com/biography/Stan-Lee" class="stan">stan lee creator of MARVEL Comics</a></li></p>
+		<p><li><a href="https://www.britannica.com/topic/DC-Comics#ref1196758" class="dc">Malcolm Wheeler-Nicholson creator of DC Comics</a></li></p>
 	  </ul>
 	</aside>
 <footer><em><p>this page created by Kaden Poland &copy; 2021</p></em></footer>
