--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	</article>
 </section>
   <aside><p>other links or info</p>
-	<ul><p><li><a href="https://www.britannica.com/biography/Stan-Lee" class="stan">stan lee creator of MARVEL Comics</a></li></p>
-		<p><li><a href="https://www.britannica.com/topic/DC-Comics#ref1196758" class="dc">Malcolm Wheeler-Nicholson creator of DC Comics</a></li></p>
+	<ul><p><li><a styles="red" href="https://www.britannica.com/biography/Stan-Lee">stan lee creator of MARVEL Comics</a></li></p>
+		<p><li><a styles="#0476f2" href="https://www.britannica.com/topic/DC-Comics#ref1196758" class="dc">Malcolm Wheeler-Nicholson creator of DC Comics</a></li></p>
 	  </ul>
 	</aside>
 <footer><em><p>this page created by Kaden Poland &copy; 2021</p></em></footer>
