--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</article>
 </section>
   <aside><p>other links or info</p>
-	<ul><p styles="red"><li><a href="https://www.britannica.com/biography/Stan-Lee">stan lee creator of MARVEL Comics</a></li></p>
+	<ul><p styles=color:"red"><li><a href="https://www.britannica.com/biography/Stan-Lee">stan lee creator of MARVEL Comics</a></li></p>
 		<p styles="#0476f2"><li><a href="https://www.britannica.com/topic/DC-Comics#ref1196758" class="dc">Malcolm Wheeler-Nicholson creator of DC Comics</a></li></p>
 	  </ul>
 	</aside>
