--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 		</ul>
 	</article>
 </section>
-  <aside><p>other links or info</p>
-	<ul><p styles=color:"red"><li><a href="https://www.britannica.com/biography/Stan-Lee">stan lee creator of MARVEL Comics</a></li></p>
-		<p styles="#0476f2"><li><a href="https://www.britannica.com/topic/DC-Comics#ref1196758" class="dc">Malcolm Wheeler-Nicholson creator of DC Comics</a></li></p>
-	  </ul>
+  <aside class= "centeraside"><p>other links or info</p>
+	<p class="stan"><a href="https://www.britannica.com/biography/Stan-Lee" >Stan Lee creator of MARVEL Comics</a></p><br>
+		<p><a href="https://www.britannica.com/topic/DC-Comics#ref1196758">Malcolm Wheeler-Nicholson creator of DC Comics</a></p>
 	</aside>
 <footer><em><p>this page created by Kaden Poland &copy; 2021</p></em></footer>
 </div>
