--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav><ul>
 	  <li><a href="index.html">HOME</a></li>
 	  <li><a href="#link2">COMICS</a></li>
-	  <li><a href="#link3">ABOUT CEREATORS</a></li>
+	  <li><a href="#link3">ABOUT CREATORS</a></li>
 	  <li style="float: right;"><a href="#link4">CONTACT</a></li>
 	  </ul></nav>
 <section>
